argo/k8s-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  strategy: {}
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: tjololo/hello-go-web
        name: hello-go-web
        readinessProbe:
          failureThreshold: 3
          successThreshold: 1
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 5
          httpGet:
            path: /hello
            port: 8080
        livenessProbe:
          failureThreshold: 3
          successThreshold: 1
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 5
          httpGet:
            path: /hello
            port: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
