argo/k8s-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-http
  namespace: demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: hello-world
  sessionAffinity: None
  type: ClusterIP
