argo/k8s-config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello.127.0.0.1.xip.io
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-world-http
          servicePort: http
